// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SourceComponent: Component should render correctly 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Source"
  />
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Source"
        id="dataSource.source.subTitle"
        values={Object {}}
      />
    }
    primaryMenuItems={Array []}
    projectId="projectId"
    secondaryMenuItems={Array []}
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Source"
        id="dataSource.source.subTitle"
        values={Object {}}
      />
    }
  >
    <DataSourceNavigation
      dataSource={
        Object {
          "id": "dataSourceIdId",
          "jobs": Array [],
          "metaData": Object {},
          "project": Object {
            "id": "projectId",
          },
        }
      }
      dirty={false}
      handleChange={[Function]}
      handleSubmit={[Function]}
      hideOnDesktop={false}
      intl={
        Object {
          "formatMessage": [Function],
        }
      }
      isSubmitting={false}
      match={
        Object {
          "params": Object {
            "dataSourceId": "1",
          },
          "url": "url",
        }
      }
      onDataSourceChange={[Function]}
      removeDataSource={[Function]}
      setFieldValue={[Function]}
      theme={
        Object {
          "background": "#000",
          "border": "#2F2F36",
          "button": Object {
            "background": "#1d1d20",
            "text": "#FFF",
          },
          "buttonDisabled": Object {
            "background": "#1d1d20",
            "text": "#71737e",
          },
          "card": Object {
            "background": "#1d1d20",
            "border": "#FFF",
            "label": "#71737e",
            "text": "#FFF",
          },
          "checkbox": Object {
            "border": "#2F2F36",
            "text": "#FFF",
          },
          "colors": Object {
            "black": "#000",
            "coolGray": "#a6a7aa",
            "darkGrey": "#1d1d20",
            "lightGrey": "#71737e",
            "mediumGray": "#2F2F36",
            "red": "#f21e29",
            "veryLightPink": "#f0efef",
            "white": "#FFF",
            "yellow": "#be8f00",
          },
          "dataGrid": Object {
            "background": "#000",
            "text": "#71737e",
          },
          "error": "#f21e29",
          "header": Object {
            "border": "#2F2F36",
            "text": "#FFF",
          },
          "icon": Object {
            "background": "#1d1d20",
            "fill": "#FFF",
            "fillInverse": "#000",
          },
          "input": Object {
            "text": "#FFF",
          },
          "inverseButton": Object {
            "background": "#FFF",
            "text": "#000",
          },
          "label": Object {
            "border": "#2F2F36",
            "text": "#71737e",
          },
          "menu": Object {
            "background": "#000",
            "text": "#FFF",
          },
          "providerContainer": Object {
            "minHeight": "100vh",
          },
          "radioButton": Object {
            "active": Object {
              "background": "#FFF",
              "fill": "#1d1d20",
            },
            "border": "#FFF",
            "text": "#FFF",
            "unActive": Object {
              "background": "#1d1d20",
              "dot": "#FFF",
              "fill": "#FFF",
            },
          },
          "secondaryText": "#71737e",
          "select": Object {
            "background": "#1d1d20",
            "border": "#000",
          },
          "stepper": Object {
            "active": "#FFF",
            "background": "#1d1d20",
          },
          "tab": Object {
            "active": "#FFF",
            "hover": "#FFF",
            "normal": "#2F2F36",
          },
          "table": Object {
            "background": Object {
              "body": "#000",
              "header": "#1d1d20",
            },
            "border": Object {
              "body": "#1d1d20",
              "header": "#000",
            },
            "text": Object {
              "body": "#FFF",
              "header": "#71737e",
            },
          },
          "text": "#FFF",
          "textArea": Object {
            "background": "#000",
            "text": "#FFF",
          },
          "textField": Object {
            "error": "#f21e29",
            "label": "#71737e",
          },
          "typography": Object {
            "h1": Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 600,
            },
            "h2": Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 100,
            },
            "h3": Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "18px",
              "fontWeight": 600,
            },
            "p": Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "18px",
              "fontWeight": 200,
            },
            "pre": Object {
              "fontFamily": "Hack, monospace",
              "fontSize": "18px",
            },
            "span": Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "14px",
            },
          },
          "warning": "#be8f00",
        }
      }
      values={
        Object {
          "file": "file",
          "name": "name",
          "runLastJob": true,
          "type": "file",
        }
      }
    />
  </ContextHeader>
  <styled.form
    onSubmit={[Function]}
  >
    <WithTheme(SourceFormComponent)
      dataSource={
        Object {
          "id": "dataSourceIdId",
          "jobs": Array [],
          "metaData": Object {},
          "project": Object {
            "id": "projectId",
          },
        }
      }
      handleChange={[Function]}
      intl={
        Object {
          "formatMessage": [Function],
        }
      }
      match={
        Object {
          "params": Object {
            "dataSourceId": "1",
          },
          "url": "url",
        }
      }
      onDataSourceChange={[Function]}
      removeDataSource={[Function]}
      setFieldValue={[Function]}
      theme={
        Object {
          "background": "#000",
          "border": "#2F2F36",
          "button": Object {
            "background": "#1d1d20",
            "text": "#FFF",
          },
          "buttonDisabled": Object {
            "background": "#1d1d20",
            "text": "#71737e",
          },
          "card": Object {
            "background": "#1d1d20",
            "border": "#FFF",
            "label": "#71737e",
            "text": "#FFF",
          },
          "checkbox": Object {
            "border": "#2F2F36",
            "text": "#FFF",
          },
          "colors": Object {
            "black": "#000",
            "coolGray": "#a6a7aa",
            "darkGrey": "#1d1d20",
            "lightGrey": "#71737e",
            "mediumGray": "#2F2F36",
            "red": "#f21e29",
            "veryLightPink": "#f0efef",
            "white": "#FFF",
            "yellow": "#be8f00",
          },
          "dataGrid": Object {
            "background": "#000",
            "text": "#71737e",
          },
          "error": "#f21e29",
          "header": Object {
            "border": "#2F2F36",
            "text": "#FFF",
          },
          "icon": Object {
            "background": "#1d1d20",
            "fill": "#FFF",
            "fillInverse": "#000",
          },
          "input": Object {
            "text": "#FFF",
          },
          "inverseButton": Object {
            "background": "#FFF",
            "text": "#000",
          },
          "label": Object {
            "border": "#2F2F36",
            "text": "#71737e",
          },
          "menu": Object {
            "background": "#000",
            "text": "#FFF",
          },
          "providerContainer": Object {
            "minHeight": "100vh",
          },
          "radioButton": Object {
            "active": Object {
              "background": "#FFF",
              "fill": "#1d1d20",
            },
            "border": "#FFF",
            "text": "#FFF",
            "unActive": Object {
              "background": "#1d1d20",
              "dot": "#FFF",
              "fill": "#FFF",
            },
          },
          "secondaryText": "#71737e",
          "select": Object {
            "background": "#1d1d20",
            "border": "#000",
          },
          "stepper": Object {
            "active": "#FFF",
            "background": "#1d1d20",
          },
          "tab": Object {
            "active": "#FFF",
            "hover": "#FFF",
            "normal": "#2F2F36",
          },
          "table": Object {
            "background": Object {
              "body": "#000",
              "header": "#1d1d20",
            },
            "border": Object {
              "body": "#1d1d20",
              "header": "#000",
            },
            "text": Object {
              "body": "#FFF",
              "header": "#71737e",
            },
          },
          "text": "#FFF",
          "textArea": Object {
            "background": "#000",
            "text": "#FFF",
          },
          "textField": Object {
            "error": "#f21e29",
            "label": "#71737e",
          },
          "typography": Object {
            "h1": Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 600,
            },
            "h2": Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 100,
            },
            "h3": Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "18px",
              "fontWeight": 600,
            },
            "p": Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "18px",
              "fontWeight": 200,
            },
            "pre": Object {
              "fontFamily": "Hack, monospace",
              "fontSize": "18px",
            },
            "span": Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "14px",
            },
          },
          "warning": "#be8f00",
        }
      }
      values={
        Object {
          "file": "file",
          "name": "name",
          "runLastJob": true,
          "type": "file",
        }
      }
    />
    <styled.div>
      <Styled(Styled(Span))
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="View Past Versions"
          id="dataSource.source.pastVersions"
          values={Object {}}
        />
      </Styled(Styled(Span))>
      <Styled(Styled(Span))
        id="removeDataSourceDesktopBtn"
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Delete Data Source"
          id="dataSource.source.removeDataSource"
          values={Object {}}
        />
      </Styled(Styled(Span))>
    </styled.div>
    <NavigationContainer
      fixed={false}
      hideOnDesktop={false}
      right={true}
    >
      <NextButton
        disabled={true}
        loading={false}
        onClick={[Function]}
        type="submit"
      >
        <FormattedMessage
          defaultMessage="Save"
          id="dataSource.source.save"
          values={Object {}}
        />
      </NextButton>
    </NavigationContainer>
  </styled.form>
  <DataSourceNavigation
    dataSource={
      Object {
        "id": "dataSourceIdId",
        "jobs": Array [],
        "metaData": Object {},
        "project": Object {
          "id": "projectId",
        },
      }
    }
    dirty={false}
    handleChange={[Function]}
    handleSubmit={[Function]}
    hideOnDesktop={true}
    intl={
      Object {
        "formatMessage": [Function],
      }
    }
    isSubmitting={false}
    match={
      Object {
        "params": Object {
          "dataSourceId": "1",
        },
        "url": "url",
      }
    }
    onDataSourceChange={[Function]}
    removeDataSource={[Function]}
    setFieldValue={[Function]}
    theme={
      Object {
        "background": "#000",
        "border": "#2F2F36",
        "button": Object {
          "background": "#1d1d20",
          "text": "#FFF",
        },
        "buttonDisabled": Object {
          "background": "#1d1d20",
          "text": "#71737e",
        },
        "card": Object {
          "background": "#1d1d20",
          "border": "#FFF",
          "label": "#71737e",
          "text": "#FFF",
        },
        "checkbox": Object {
          "border": "#2F2F36",
          "text": "#FFF",
        },
        "colors": Object {
          "black": "#000",
          "coolGray": "#a6a7aa",
          "darkGrey": "#1d1d20",
          "lightGrey": "#71737e",
          "mediumGray": "#2F2F36",
          "red": "#f21e29",
          "veryLightPink": "#f0efef",
          "white": "#FFF",
          "yellow": "#be8f00",
        },
        "dataGrid": Object {
          "background": "#000",
          "text": "#71737e",
        },
        "error": "#f21e29",
        "header": Object {
          "border": "#2F2F36",
          "text": "#FFF",
        },
        "icon": Object {
          "background": "#1d1d20",
          "fill": "#FFF",
          "fillInverse": "#000",
        },
        "input": Object {
          "text": "#FFF",
        },
        "inverseButton": Object {
          "background": "#FFF",
          "text": "#000",
        },
        "label": Object {
          "border": "#2F2F36",
          "text": "#71737e",
        },
        "menu": Object {
          "background": "#000",
          "text": "#FFF",
        },
        "providerContainer": Object {
          "minHeight": "100vh",
        },
        "radioButton": Object {
          "active": Object {
            "background": "#FFF",
            "fill": "#1d1d20",
          },
          "border": "#FFF",
          "text": "#FFF",
          "unActive": Object {
            "background": "#1d1d20",
            "dot": "#FFF",
            "fill": "#FFF",
          },
        },
        "secondaryText": "#71737e",
        "select": Object {
          "background": "#1d1d20",
          "border": "#000",
        },
        "stepper": Object {
          "active": "#FFF",
          "background": "#1d1d20",
        },
        "tab": Object {
          "active": "#FFF",
          "hover": "#FFF",
          "normal": "#2F2F36",
        },
        "table": Object {
          "background": Object {
            "body": "#000",
            "header": "#1d1d20",
          },
          "border": Object {
            "body": "#1d1d20",
            "header": "#000",
          },
          "text": Object {
            "body": "#FFF",
            "header": "#71737e",
          },
        },
        "text": "#FFF",
        "textArea": Object {
          "background": "#000",
          "text": "#FFF",
        },
        "textField": Object {
          "error": "#f21e29",
          "label": "#71737e",
        },
        "typography": Object {
          "h1": Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontWeight": 600,
          },
          "h2": Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontWeight": 100,
          },
          "h3": Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "18px",
            "fontWeight": 600,
          },
          "p": Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "18px",
            "fontWeight": 200,
          },
          "pre": Object {
            "fontFamily": "Hack, monospace",
            "fontSize": "18px",
          },
          "span": Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "14px",
          },
        },
        "warning": "#be8f00",
      }
    }
    values={
      Object {
        "file": "file",
        "name": "name",
        "runLastJob": true,
        "type": "file",
      }
    }
  />
  <Styled(Modal)
    contentLabel="Confirm Removal"
    isOpen={false}
    style={
      Object {
        "content": Object {
          "WebkitOverflowScrolling": "touch",
          "alignItems": "center",
          "border": null,
          "borderRadius": "4px",
          "boxShadow": "0 4px 8px 0 rgba(0, 0, 0, 0.5)",
          "display": "flex",
          "flexDirection": "column",
          "left": "50%",
          "maxWidth": "600px",
          "outline": "none",
          "overflow": "auto",
          "position": "absolute",
          "right": "10px",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
          "width": "calc(100% - 20px)",
        },
        "overlay": Object {
          "backgroundColor": "rgba(29, 29, 32, 0.75)",
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 10000,
        },
      }
    }
  >
    <Styled(H1)>
      <FormattedMessage
        defaultMessage="Are you sure you want to remove the data source?"
        id="dataSource.source.removeTitle"
        values={Object {}}
      />
    </Styled(H1)>
    <styled.div>
      <BackButton
        disabled={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Cancel"
          id="dataSource.source.cancelRemoval"
          values={Object {}}
        />
      </BackButton>
      <NextButton
        id="confirmRemoveDataSource"
        loading={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Confirm"
          id="dataSource.source.confirmRemoval"
          values={Object {}}
        />
      </NextButton>
    </styled.div>
  </Styled(Modal)>
  <Styled(Modal)
    contentLabel="Confirm Run Last Job"
    isOpen={false}
    style={
      Object {
        "content": Object {
          "WebkitOverflowScrolling": "touch",
          "alignItems": "center",
          "border": null,
          "borderRadius": "4px",
          "boxShadow": "0 4px 8px 0 rgba(0, 0, 0, 0.5)",
          "display": "flex",
          "flexDirection": "column",
          "left": "50%",
          "maxWidth": "600px",
          "outline": "none",
          "overflow": "auto",
          "position": "absolute",
          "right": "10px",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
          "width": "calc(100% - 20px)",
        },
        "overlay": Object {
          "backgroundColor": "rgba(29, 29, 32, 0.75)",
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 10000,
        },
      }
    }
  >
    <Styled(H1)>
      <FormattedMessage
        defaultMessage="Do you want to run last steps on current file?"
        id="dataSource.source.removeTitle"
        values={Object {}}
      />
    </Styled(H1)>
    <styled.div>
      <BackButton
        disabled={false}
        id="declineRunLastJob"
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="No"
          id="dataSource.source.cancelRemoval"
          values={Object {}}
        />
      </BackButton>
      <NextButton
        id="confirmRunLastJob"
        loading={false}
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="Yes"
          id="dataSource.source.confirmRemoval"
          values={Object {}}
        />
      </NextButton>
    </styled.div>
  </Styled(Modal)>
</Fragment>
`;

exports[`SourceComponent: Component should render file uploader 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Source"
  />
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Source"
        id="dataSource.source.subTitle"
        values={Object {}}
      />
    }
    primaryMenuItems={Array []}
    projectId="projectId"
    secondaryMenuItems={Array []}
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Source"
        id="dataSource.source.subTitle"
        values={Object {}}
      />
    }
  >
    <DataSourceNavigation
      dataSource={
        Object {
          "project": Object {
            "id": "projectId",
          },
          "type": "file",
        }
      }
      dirty={false}
      handleChange={[Function]}
      handleSubmit={[Function]}
      hideOnDesktop={false}
      intl={
        Object {
          "formatMessage": [Function],
        }
      }
      isSubmitting={false}
      match={
        Object {
          "params": Object {
            "dataSourceId": "1",
          },
          "url": "url",
        }
      }
      onDataSourceChange={[Function]}
      removeDataSource={[Function]}
      setFieldValue={[Function]}
      theme={
        Object {
          "background": "#000",
          "border": "#2F2F36",
          "button": Object {
            "background": "#1d1d20",
            "text": "#FFF",
          },
          "buttonDisabled": Object {
            "background": "#1d1d20",
            "text": "#71737e",
          },
          "card": Object {
            "background": "#1d1d20",
            "border": "#FFF",
            "label": "#71737e",
            "text": "#FFF",
          },
          "checkbox": Object {
            "border": "#2F2F36",
            "text": "#FFF",
          },
          "colors": Object {
            "black": "#000",
            "coolGray": "#a6a7aa",
            "darkGrey": "#1d1d20",
            "lightGrey": "#71737e",
            "mediumGray": "#2F2F36",
            "red": "#f21e29",
            "veryLightPink": "#f0efef",
            "white": "#FFF",
            "yellow": "#be8f00",
          },
          "dataGrid": Object {
            "background": "#000",
            "text": "#71737e",
          },
          "error": "#f21e29",
          "header": Object {
            "border": "#2F2F36",
            "text": "#FFF",
          },
          "icon": Object {
            "background": "#1d1d20",
            "fill": "#FFF",
            "fillInverse": "#000",
          },
          "input": Object {
            "text": "#FFF",
          },
          "inverseButton": Object {
            "background": "#FFF",
            "text": "#000",
          },
          "label": Object {
            "border": "#2F2F36",
            "text": "#71737e",
          },
          "menu": Object {
            "background": "#000",
            "text": "#FFF",
          },
          "providerContainer": Object {
            "minHeight": "100vh",
          },
          "radioButton": Object {
            "active": Object {
              "background": "#FFF",
              "fill": "#1d1d20",
            },
            "border": "#FFF",
            "text": "#FFF",
            "unActive": Object {
              "background": "#1d1d20",
              "dot": "#FFF",
              "fill": "#FFF",
            },
          },
          "secondaryText": "#71737e",
          "select": Object {
            "background": "#1d1d20",
            "border": "#000",
          },
          "stepper": Object {
            "active": "#FFF",
            "background": "#1d1d20",
          },
          "tab": Object {
            "active": "#FFF",
            "hover": "#FFF",
            "normal": "#2F2F36",
          },
          "table": Object {
            "background": Object {
              "body": "#000",
              "header": "#1d1d20",
            },
            "border": Object {
              "body": "#1d1d20",
              "header": "#000",
            },
            "text": Object {
              "body": "#FFF",
              "header": "#71737e",
            },
          },
          "text": "#FFF",
          "textArea": Object {
            "background": "#000",
            "text": "#FFF",
          },
          "textField": Object {
            "error": "#f21e29",
            "label": "#71737e",
          },
          "typography": Object {
            "h1": Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 600,
            },
            "h2": Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 100,
            },
            "h3": Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "18px",
              "fontWeight": 600,
            },
            "p": Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "18px",
              "fontWeight": 200,
            },
            "pre": Object {
              "fontFamily": "Hack, monospace",
              "fontSize": "18px",
            },
            "span": Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "14px",
            },
          },
          "warning": "#be8f00",
        }
      }
      values={
        Object {
          "file": "file",
          "name": "name",
          "runLastJob": true,
          "type": "file",
        }
      }
    />
  </ContextHeader>
  <styled.form
    onSubmit={[Function]}
  >
    <WithTheme(SourceFormComponent)
      dataSource={
        Object {
          "project": Object {
            "id": "projectId",
          },
          "type": "file",
        }
      }
      handleChange={[Function]}
      intl={
        Object {
          "formatMessage": [Function],
        }
      }
      match={
        Object {
          "params": Object {
            "dataSourceId": "1",
          },
          "url": "url",
        }
      }
      onDataSourceChange={[Function]}
      removeDataSource={[Function]}
      setFieldValue={[Function]}
      theme={
        Object {
          "background": "#000",
          "border": "#2F2F36",
          "button": Object {
            "background": "#1d1d20",
            "text": "#FFF",
          },
          "buttonDisabled": Object {
            "background": "#1d1d20",
            "text": "#71737e",
          },
          "card": Object {
            "background": "#1d1d20",
            "border": "#FFF",
            "label": "#71737e",
            "text": "#FFF",
          },
          "checkbox": Object {
            "border": "#2F2F36",
            "text": "#FFF",
          },
          "colors": Object {
            "black": "#000",
            "coolGray": "#a6a7aa",
            "darkGrey": "#1d1d20",
            "lightGrey": "#71737e",
            "mediumGray": "#2F2F36",
            "red": "#f21e29",
            "veryLightPink": "#f0efef",
            "white": "#FFF",
            "yellow": "#be8f00",
          },
          "dataGrid": Object {
            "background": "#000",
            "text": "#71737e",
          },
          "error": "#f21e29",
          "header": Object {
            "border": "#2F2F36",
            "text": "#FFF",
          },
          "icon": Object {
            "background": "#1d1d20",
            "fill": "#FFF",
            "fillInverse": "#000",
          },
          "input": Object {
            "text": "#FFF",
          },
          "inverseButton": Object {
            "background": "#FFF",
            "text": "#000",
          },
          "label": Object {
            "border": "#2F2F36",
            "text": "#71737e",
          },
          "menu": Object {
            "background": "#000",
            "text": "#FFF",
          },
          "providerContainer": Object {
            "minHeight": "100vh",
          },
          "radioButton": Object {
            "active": Object {
              "background": "#FFF",
              "fill": "#1d1d20",
            },
            "border": "#FFF",
            "text": "#FFF",
            "unActive": Object {
              "background": "#1d1d20",
              "dot": "#FFF",
              "fill": "#FFF",
            },
          },
          "secondaryText": "#71737e",
          "select": Object {
            "background": "#1d1d20",
            "border": "#000",
          },
          "stepper": Object {
            "active": "#FFF",
            "background": "#1d1d20",
          },
          "tab": Object {
            "active": "#FFF",
            "hover": "#FFF",
            "normal": "#2F2F36",
          },
          "table": Object {
            "background": Object {
              "body": "#000",
              "header": "#1d1d20",
            },
            "border": Object {
              "body": "#1d1d20",
              "header": "#000",
            },
            "text": Object {
              "body": "#FFF",
              "header": "#71737e",
            },
          },
          "text": "#FFF",
          "textArea": Object {
            "background": "#000",
            "text": "#FFF",
          },
          "textField": Object {
            "error": "#f21e29",
            "label": "#71737e",
          },
          "typography": Object {
            "h1": Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 600,
            },
            "h2": Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 100,
            },
            "h3": Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "18px",
              "fontWeight": 600,
            },
            "p": Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "18px",
              "fontWeight": 200,
            },
            "pre": Object {
              "fontFamily": "Hack, monospace",
              "fontSize": "18px",
            },
            "span": Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "14px",
            },
          },
          "warning": "#be8f00",
        }
      }
      values={
        Object {
          "file": "file",
          "name": "name",
          "runLastJob": true,
          "type": "file",
        }
      }
    />
    <NavigationContainer
      fixed={false}
      hideOnDesktop={false}
      right={true}
    >
      <NextButton
        disabled={true}
        loading={false}
        onClick={[Function]}
        type="submit"
      >
        <FormattedMessage
          defaultMessage="Save"
          id="dataSource.source.save"
          values={Object {}}
        />
      </NextButton>
    </NavigationContainer>
  </styled.form>
  <DataSourceNavigation
    dataSource={
      Object {
        "project": Object {
          "id": "projectId",
        },
        "type": "file",
      }
    }
    dirty={false}
    handleChange={[Function]}
    handleSubmit={[Function]}
    hideOnDesktop={true}
    intl={
      Object {
        "formatMessage": [Function],
      }
    }
    isSubmitting={false}
    match={
      Object {
        "params": Object {
          "dataSourceId": "1",
        },
        "url": "url",
      }
    }
    onDataSourceChange={[Function]}
    removeDataSource={[Function]}
    setFieldValue={[Function]}
    theme={
      Object {
        "background": "#000",
        "border": "#2F2F36",
        "button": Object {
          "background": "#1d1d20",
          "text": "#FFF",
        },
        "buttonDisabled": Object {
          "background": "#1d1d20",
          "text": "#71737e",
        },
        "card": Object {
          "background": "#1d1d20",
          "border": "#FFF",
          "label": "#71737e",
          "text": "#FFF",
        },
        "checkbox": Object {
          "border": "#2F2F36",
          "text": "#FFF",
        },
        "colors": Object {
          "black": "#000",
          "coolGray": "#a6a7aa",
          "darkGrey": "#1d1d20",
          "lightGrey": "#71737e",
          "mediumGray": "#2F2F36",
          "red": "#f21e29",
          "veryLightPink": "#f0efef",
          "white": "#FFF",
          "yellow": "#be8f00",
        },
        "dataGrid": Object {
          "background": "#000",
          "text": "#71737e",
        },
        "error": "#f21e29",
        "header": Object {
          "border": "#2F2F36",
          "text": "#FFF",
        },
        "icon": Object {
          "background": "#1d1d20",
          "fill": "#FFF",
          "fillInverse": "#000",
        },
        "input": Object {
          "text": "#FFF",
        },
        "inverseButton": Object {
          "background": "#FFF",
          "text": "#000",
        },
        "label": Object {
          "border": "#2F2F36",
          "text": "#71737e",
        },
        "menu": Object {
          "background": "#000",
          "text": "#FFF",
        },
        "providerContainer": Object {
          "minHeight": "100vh",
        },
        "radioButton": Object {
          "active": Object {
            "background": "#FFF",
            "fill": "#1d1d20",
          },
          "border": "#FFF",
          "text": "#FFF",
          "unActive": Object {
            "background": "#1d1d20",
            "dot": "#FFF",
            "fill": "#FFF",
          },
        },
        "secondaryText": "#71737e",
        "select": Object {
          "background": "#1d1d20",
          "border": "#000",
        },
        "stepper": Object {
          "active": "#FFF",
          "background": "#1d1d20",
        },
        "tab": Object {
          "active": "#FFF",
          "hover": "#FFF",
          "normal": "#2F2F36",
        },
        "table": Object {
          "background": Object {
            "body": "#000",
            "header": "#1d1d20",
          },
          "border": Object {
            "body": "#1d1d20",
            "header": "#000",
          },
          "text": Object {
            "body": "#FFF",
            "header": "#71737e",
          },
        },
        "text": "#FFF",
        "textArea": Object {
          "background": "#000",
          "text": "#FFF",
        },
        "textField": Object {
          "error": "#f21e29",
          "label": "#71737e",
        },
        "typography": Object {
          "h1": Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontWeight": 600,
          },
          "h2": Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontWeight": 100,
          },
          "h3": Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "18px",
            "fontWeight": 600,
          },
          "p": Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "18px",
            "fontWeight": 200,
          },
          "pre": Object {
            "fontFamily": "Hack, monospace",
            "fontSize": "18px",
          },
          "span": Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "14px",
          },
        },
        "warning": "#be8f00",
      }
    }
    values={
      Object {
        "file": "file",
        "name": "name",
        "runLastJob": true,
        "type": "file",
      }
    }
  />
  <Styled(Modal)
    contentLabel="Confirm Removal"
    isOpen={false}
    style={
      Object {
        "content": Object {
          "WebkitOverflowScrolling": "touch",
          "alignItems": "center",
          "border": null,
          "borderRadius": "4px",
          "boxShadow": "0 4px 8px 0 rgba(0, 0, 0, 0.5)",
          "display": "flex",
          "flexDirection": "column",
          "left": "50%",
          "maxWidth": "600px",
          "outline": "none",
          "overflow": "auto",
          "position": "absolute",
          "right": "10px",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
          "width": "calc(100% - 20px)",
        },
        "overlay": Object {
          "backgroundColor": "rgba(29, 29, 32, 0.75)",
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 10000,
        },
      }
    }
  >
    <Styled(H1)>
      <FormattedMessage
        defaultMessage="Are you sure you want to remove the data source?"
        id="dataSource.source.removeTitle"
        values={Object {}}
      />
    </Styled(H1)>
    <styled.div>
      <BackButton
        disabled={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Cancel"
          id="dataSource.source.cancelRemoval"
          values={Object {}}
        />
      </BackButton>
      <NextButton
        id="confirmRemoveDataSource"
        loading={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Confirm"
          id="dataSource.source.confirmRemoval"
          values={Object {}}
        />
      </NextButton>
    </styled.div>
  </Styled(Modal)>
  <Styled(Modal)
    contentLabel="Confirm Run Last Job"
    isOpen={false}
    style={
      Object {
        "content": Object {
          "WebkitOverflowScrolling": "touch",
          "alignItems": "center",
          "border": null,
          "borderRadius": "4px",
          "boxShadow": "0 4px 8px 0 rgba(0, 0, 0, 0.5)",
          "display": "flex",
          "flexDirection": "column",
          "left": "50%",
          "maxWidth": "600px",
          "outline": "none",
          "overflow": "auto",
          "position": "absolute",
          "right": "10px",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
          "width": "calc(100% - 20px)",
        },
        "overlay": Object {
          "backgroundColor": "rgba(29, 29, 32, 0.75)",
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 10000,
        },
      }
    }
  >
    <Styled(H1)>
      <FormattedMessage
        defaultMessage="Do you want to run last steps on current file?"
        id="dataSource.source.removeTitle"
        values={Object {}}
      />
    </Styled(H1)>
    <styled.div>
      <BackButton
        disabled={false}
        id="declineRunLastJob"
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="No"
          id="dataSource.source.cancelRemoval"
          values={Object {}}
        />
      </BackButton>
      <NextButton
        id="confirmRunLastJob"
        loading={false}
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="Yes"
          id="dataSource.source.confirmRemoval"
          values={Object {}}
        />
      </NextButton>
    </styled.div>
  </Styled(Modal)>
</Fragment>
`;
